--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.4",
+    "axios": "^0.27.2",
     "next": "12.2.0",
+    "openai": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
