--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/react": "^2.0.0-beta.114",
     "@tiptap/starter-kit": "^2.0.0-beta.190",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "next": "12.2.0",
     "openai": "^3.0.0",
     "react": "18.2.0",
