--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@tiptap/starter-kit": "^2.0.0-beta.190",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "next": "12.2.0",
+    "node-fetch": "^3.2.6",
     "openai": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
