--- a/.github/workflows/queuePost.yml
+++ b/.github/workflows/queuePost.yml
@@ -6,8 +6,8 @@ jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
-      - name: Call our API route
-        run: |
-          curl --request POST \
-          --url 'https://yoursite.com/api/cron' \
-          --header 'Authorization: Bearer ${{ secrets.API_SECRET_KEY }}'
+      - name: Make post
+        uses: fjogeleit/http-request-action@v1.9.2
+        with:
+          url: "https://power-post.vercel.app/api/makePost/"
+          data: '{"content": ${{ github.event.client_payload.content }} , "userID": ${{ github.event.client_payload.userID }}, "accessToken": ${{ github.event.client_payload.accessToken }}}'
